# cot

./: Cargo.toml  deny.toml
cot/: Cargo.toml
cot-cli/: Cargo.toml
cot-cli/src/: new_project.rs
cot-cli/src/project_template/: Cargo.lock.template
cot-core/: Cargo.toml
cot-core/src/: html.rs
cot-macros/src/: lib.rs
cot/src/session/store/: redis.rs
examples/forms/: Cargo.toml
