[workspace]
members = [
    "cot",
    "cot-cli",
    "cot-codegen",
    "cot-macros",
    "cot-core",
    # Examples
    "examples/admin",
    "examples/custom-error-pages",
    "examples/send-email",
    "examples/custom-task",
    "examples/file-upload",
    "examples/hello-world",
    "examples/json",
    "examples/sessions",
    "examples/todo-list",
    "examples/forms"
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://cot.rs"
repository = "https://github.com/cot-rs/cot"
keywords = ["web", "framework", "server", "backend"]
readme = "README.md"
authors = [
    "Mateusz Maćkowski <mateusz@mackowski.org>",
    "Marek Grzelak <marek.grzelak@seqre.dev>",
]

[workspace.lints.rust]
deprecated-safe = "warn"
keyword-idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unstable_features = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
future_not_send = "warn"
allow_attributes = "warn"
# TODO: consider removing this if/when this is fixed:
# https://github.com/rust-lang/rust-clippy/issues/16175
needless_continue = "allow"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false }
aide = { version = "0.15", default-features = false }
anstyle = "1.0.13"
anyhow = "1.0.102"
askama = { version = "0.15.4", default-features = false }
askama_derive = { version = "0.15.3", default-features = false, features = ["external-sources", "proc-macro"] }
assert_cmd = "2"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
backtrace = "0.3.76"
bytes = "1.11"
cargo_toml = "0.22"
chrono = { version = "0.4.44", default-features = false }
chrono-tz = { version = "0.10.4", default-features = false }
chumsky = { version = "0.9.3", default-features = false }
clap = { version = "4.5.60", features = ["deprecated"] }
clap-verbosity-flag = { version = "3", default-features = false }
clap_complete = "4"
clap_mangen = "0.2.31"
cot = { version = "0.5.0", path = "cot" }
cot_core = { version = "0.5.0", path = "cot-core" }
cot_codegen = { version = "0.5.0", path = "cot-codegen" }
cot_macros = { version = "0.5.0", path = "cot-macros" }
criterion = "0.8"
darling = "0.23"
deadpool-redis = { version = "0.22", default-features = false }
derive_builder = "0.20"
derive_more = "2"
digest = "0.10"
email_address = "0.2.9"
fake = "4"
fantoccini = "0.22"
form_urlencoded = "1"
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
grass = { version = "0.13.4", default-features = false }
heck = "0.5"
hex = "0.4"
hmac = "0.12"
http = "1.4"
http-body = "1"
http-body-util = "0.1.3"
humantime = "2"
indexmap = "2"
insta = { version = "1", features = ["filters"] }
insta-cmd = "0.6"
lettre = { version = "0.11", default-features = false }
idna = { version = "1.1", default-features = false }
mime = "0.3"
mime_guess = { version = "2", default-features = false }
mockall = "0.14"
multer = "3"
password-auth = { version = "1", default-features = false }
petgraph = { version = "0.8", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro-crate = "3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.9", default-features = false }
redis = { version = "0.32", default-features = false }
reqwest = { version = "0.13", default-features = false }
rustversion = "1"
schemars = { version = "0.9", default-features = false }
sea-query = { version = "0.32", default-features = false }
sea-query-binder = { version = "0.7", default-features = false }
serde = "1"
serde_html_form = { version = "0.4", default-features = false }
serde_json = "1"
serde_path_to_error = "0.1.20"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
swagger-ui-redist = { version = "0.1" }
syn = { version = "2", default-features = false }
sync_wrapper = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3.46", default-features = false }
tokio = { version = "1.49", default-features = false }
toml = { version = "0.9", default-features = false }
tower = "0.5.3"
tower-livereload = "0.9.6"
tower-sessions = { version = "0.15", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
tracing-test = "0.2"
trybuild = { version = "1", features = ["diff"] }
url = "2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
