[package]
name = "cot-cli"
version = "0.5.0"
description = "Command-line interface for the Cot web framework"
categories = ["command-line-utilities", "web-programming"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
authors.workspace = true

[[bin]]
name = "cot"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
cargo_toml.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env", "wrap_help", "string"] }
clap_complete.workspace = true
clap_mangen.workspace = true
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
darling.workspace = true
cot.workspace = true
cot_codegen = { workspace = true, features = ["symbol-resolver"] }
glob.workspace = true
heck.workspace = true
hex.workspace = true
petgraph.workspace = true
prettyplease.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
rand = { workspace = true, features = ["std", "std_rng", "sys_rng"] }
quote.workspace = true
syn.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
cot-cli = { path = ".", features = ["test_utils"] }
assert_cmd.workspace = true
insta.workspace = true
insta-cmd.workspace = true
tempfile.workspace = true
trybuild.workspace = true

[features]
test_utils = []
